# AmphoreusCryptoColdWallet

./: .gitignore  index.html  package-lock.json  package.json
.claude/: launch.json
.github/workflows/: release.yaml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: chain.rs  evm.rs  mod.rs  send.rs  usb.rs  wallet.rs
src-tauri/src/crypto/: derivation.rs  encryption.rs  mod.rs  secret.rs  seed.rs
src/components/: Logo.tsx  Settings.tsx
src/lib/: i18n.tsx  tauri.ts
src/routes/: Dashboard.tsx  Onboarding.tsx
